syntax = "proto3";

package kubecaptain.api.v1.app;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "kubecaptain/api/v1/app/ci/task;task";

service AppCITaskService {
  rpc Create (CreateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/app/{name}/ci/task"
      body: "*"
    };
  }
}

message CreateRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {pattern: "^[a-z]([a-z0-9-]*[a-z0-9])?$", max_len:64}
  ];
}